# NexusAnticheat

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
nexus-cheat/: CMakeLists.txt
nexus-cheat/src/: dllmain.cpp  hooks.cpp  hooks.hpp
nexus-dll/: CMakeLists.txt
nexus-dll/src/checks/: memory_check.hpp  tls_callback.hpp
nexus-dll/src/core/: anticheat_manager.hpp
nexus-dll/src/hooks/: hook_manager.hpp
nexus-dll/src/utils/: hash.hpp  logger.hpp  report_manager.hpp
nexus-driver/: CMakeLists.txt
nexus-driver/src/: driver.cpp  driver.hpp
nexus-game/: CMakeLists.txt
nexus-game/src/: main.cpp  player.cpp  player.hpp
nexus-launcher/: CMakeLists.txt
nexus-launcher/src/: main.h
src/dll/: main.cpp
src/dll/checks/: memory_check.hpp  tls_callback.hpp
src/dll/core/: anticheat_manager.hpp  feature_registry.hpp
src/dll/hooks/: messagebox_hook.hpp
src/dll/utils/: hash.hpp  logger.hpp  uuid.hpp
src/exe/: main.cpp  main.h
